# sieve

./: .cursorrules  .gitattributes  .gitguardian.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-DOCS  NOTICE  README.md  README.zh-CN.md  SECURITY.md  deny.toml  rust-toolchain.toml
crates/sieve-cli/: Cargo.toml
crates/sieve-cli/src/: audit.rs  cli.rs  config.rs  daemon.rs  daemon_control_plane.rs  embedded_rules.rs  engine_adapter.rs  gui_peer_verify.rs  main.rs  process_context.rs  upstream_routes.rs
crates/sieve-cli/src/audit_archive/: keys.rs  mod.rs
crates/sieve-cli/src/billing/: detector.rs  estimator.rs  mod.rs  pricing.rs  usage_store.rs
crates/sieve-cli/src/commands/: audit.rs  audit_keys.rs  control.rs  decisions.rs  doctor.rs  ipc_client.rs  lifecycle.rs  mcp_scan.rs  mod.rs  rules.rs  setup.rs  uninstall.rs  usage.rs  verify.rs
crates/sieve-cli/tests/: audit_append_only.rs  content_type_matrix.rs  doctor.rs  dogfood_e2e.rs  golden_baseline.rs  graylist_integration.rs  inbound_block.rs  multi_agent_routing.rs  multi_agent_setup.rs  outbound_block.rs  proxy_passthrough.rs  redteam_inbound.rs  redteam_outbound.rs  sequence_window_e2e.rs  setup_doctor_rollback.rs  sieve_setup_dry_run.rs  user_rules_loading.rs
crates/sieve-cli/tests/fixtures/golden/: benign_anthropic_messages.golden  benign_openai_chat.golden  out01_anthropic_messages.golden  out01_openai_chat.golden
crates/sieve-core/: Cargo.toml
crates/sieve-core/src/: address_guard.rs  detection.rs  error.rs  fuzz_helpers.rs  lib.rs  skill_install_guard.rs  tool_use_aggregator.rs
crates/sieve-core/src/forwarder/: mod.rs  proxy.rs
crates/sieve-core/src/pipeline/: inbound.rs  inbound_hold.rs  inbound_hook.rs  mod.rs  outbound.rs  outbound_redact.rs  streaming.rs
crates/sieve-core/src/protocol/: anthropic.rs  codec.rs  mod.rs  openai.rs  unified_message.rs
crates/sieve-core/src/sequence/: detector.rs  feature.rs  mod.rs
crates/sieve-core/src/sse/: mod.rs  openai_parser.rs  parser.rs  passthrough.rs
crates/sieve-core/tests/: proxy_connector.rs
crates/sieve-hook/: Cargo.toml
crates/sieve-hook/benches/: hook_startup.rs
crates/sieve-hook/src/: codex.rs  codex_ipc.rs  decision.rs  error.rs  hermes.rs  lib.rs  main.rs  pending.rs  protocol.rs
crates/sieve-hook/tests/: main_fail_closed.rs
crates/sieve-ipc/: Cargo.toml
crates/sieve-ipc/src/: decision_file.rs  error.rs  frame_reader.rs  lib.rs  origin_header.rs  paths.rs  pending_file.rs  protocol.rs  socket_client.rs  socket_server.rs  ts_serde.rs
crates/sieve-ipc/src/client/: connection.rs  mod.rs
crates/sieve-ipc/src/protocol/: README.md  audit.rs  decision.rs  envelope.rs  handshake.rs  health.rs  mod.rs  notify.rs  pending.rs  rules.rs
crates/sieve-ipc/src/server/: mod.rs  socket_server.rs
crates/sieve-ipc/src/wire/: mod.rs  request_decision_wire.rs
crates/sieve-ipc/tests/: control_plane_dispatch.rs  decision_response_v2.rs  end_to_end.rs  gui_peer_gate.rs  headless_decision_e2e.rs  schema_v2_fixtures.rs
crates/sieve-ipc/tests/fixtures/v2/: README.md
crates/sieve-policy/: Cargo.toml
crates/sieve-policy/src/: engine.rs  error.rs  graylist.rs  lib.rs  lint.rs  loader.rs
crates/sieve-policy/tests/: adr_045_immutable_guardian.rs  corruption.rs  end_to_end.rs  immutable_guardian.rs
crates/sieve-rules/: Cargo.toml
crates/sieve-rules/bench-data/attacks/: IN-CR-01-1.txt  IN-CR-02-1.txt  IN-CR-02-10.txt  IN-CR-02-11.txt  IN-CR-02-12.txt  IN-CR-02-2.txt  IN-CR-02-3.txt  IN-CR-02-4.txt  IN-CR-02-6.txt  IN-CR-02-CURL-1.txt  IN-CR-02-CURL-10.txt  IN-CR-02-CURL-3.txt  IN-CR-02-CURL-4.txt  IN-CR-02-CURL-5.txt  IN-CR-02-CURL-7.txt  IN-CR-02-CURL-9.txt  IN-CR-02-EVAL-2.txt  IN-CR-02-EVAL-4.txt  IN-CR-02-EVAL-5.txt  IN-CR-02-EVAL-7.txt  IN-CR-02-EVAL-8.txt  IN-CR-03-1.txt  IN-CR-03-10.txt  IN-CR-03-11.txt  IN-CR-03-12.txt  IN-CR-03-2.txt  IN-CR-03-3.txt  IN-CR-03-4.txt  IN-CR-03-5.txt  IN-CR-03-6.txt  IN-CR-03-7.txt  IN-CR-03-8.txt  IN-CR-03-9.txt  IN-CR-04-10.txt  IN-CR-04-11.txt  IN-CR-04-4.txt  IN-CR-04-5.txt  IN-CR-04-6.txt  IN-CR-04-7.txt  IN-CR-04-8.txt  (+77 more)
crates/sieve-rules/bench-data/attacks-public-replay/: README.md
crates/sieve-rules/bench-data/benign/: benign-001.txt  benign-002.txt  benign-003.txt  benign-004.txt  benign-005.txt  benign-006.txt  benign-007.txt  benign-008.txt  benign-009.txt  benign-010.txt  benign-011.txt  benign-012.txt  benign-013.txt  benign-014.txt  benign-015.txt  benign-016.txt  benign-017.txt  benign-018.txt  benign-019.txt  benign-020.txt  benign-021.txt  benign-022.txt  benign-023.txt  benign-024.txt  benign-025.txt  benign-026.txt  benign-027.txt  benign-028.txt  benign-029.txt  benign-030.txt  benign-031.txt  benign-032.txt  benign-033.txt  benign-034.txt  benign-035.txt  benign-036.txt  benign-037.txt  benign-038.txt  benign-039.txt  benign-040.txt  (+30 more)
crates/sieve-rules/benches/: dataset_bench.rs  scan_70_rules.rs  scan_bench.rs  scan_with_user_rules.rs
crates/sieve-rules/rules/: inbound.toml  outbound.toml
crates/sieve-rules/src/: base58check.rs  bip39.rs  critical_lock.rs  ed25519.rs  error.rs  lib.rs  loader.rs  manifest.rs  placeholder.rs  wordlist.rs
crates/sieve-rules/src/engine/: mod.rs  system.rs
crates/sieve-rules/tests/: bip39_pipeline.rs  dataset_fp_rate.rs  fail_closed_invariant.rs  inbound_rules.rs  outbound_rules.rs
crates/sieve-rules/wordlist/: english.txt
crates/sieve-testing/: Cargo.toml
crates/sieve-testing/src/: cli.rs  daemon.rs  http.rs  lib.rs  paths.rs  upstream.rs
crates/sieve-testing/tests/: self_test.rs
crates/sieve-updater/: Cargo.toml
crates/sieve-updater/src/: cache_dir.rs  download.rs  env.rs  error.rs  install.rs  install_id.rs  lib.rs  manifest.rs  runner.rs  signature.rs  tls.rs
crates/sieve-updater/tests/: updater_e2e.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: inbound_filter.rs  sse_parser.rs  sse_parser_openai.rs  tool_use_aggregator.rs
fuzz_afl/: Cargo.toml
fuzz_afl/src/: inbound_filter.rs  sse_parser.rs  tool_use_aggregator.rs
(+1809 files in other folders)
