[workspace]
resolver = "2"
members = [
    "crates/sieve-core",
    "crates/sieve-rules",
    "crates/sieve-cli",
    "crates/sieve-ipc",
    "crates/sieve-hook",
    "crates/sieve-policy",
    "fuzz",
]
exclude = [
    "fuzz_afl",  # AFL crate 与 cargo fuzz 编译器要求不同，workspace 隔离
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/<owner>/sieve"
authors = ["doskey <doskey.lee@gmail.com>"]

[workspace.dependencies]
# 用于跨 crate 共享版本(各 crate Cargo.toml 用 .workspace = true 引用)
tokio = { version = "1", default-features = false }
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false }
rustls = { version = "0.23", default-features = false }
webpki-roots = "0.26"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
fd-lock = "4"
clap = { version = "4", features = ["derive"] }
arc-swap = "1"
serial_test = "3"

[workspace.lints.clippy]
# 1.88 起 clippy 把 `uninlined_format_args` 提到 style 默认 warn。这是纯排版偏好，
# 与正确性无关；项目已有大量 `format!("{:?}", x)` 形式的代码，集中 inline 仅会带来
# 大量无意义 diff 且抢走真实问题的注意力。允许保留两种风格。
uninlined_format_args = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"
debug = false
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
