[package]
name = "sieve-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# 关闭 forwarder feature 以剥离 hyper/rustls/aws-lc-rs C 依赖。
# 原因：aws-lc-rs 含 C/汇编实现，与 cargo fuzz 注入的
# `-Zsanitizer=address -Cllvm-args=-sanitizer-coverage-*` flags 在链接阶段冲突，
# 触发 `undefined symbol: __sancov_gen_.*` 错误（PRD §9 #5 fuzz 全覆盖硬约束）。
# fuzz_helpers 只依赖纯 Rust 的 sse/parser + tool_use_aggregator，无需 forwarder。
sieve-core = { path = "../crates/sieve-core", default-features = false }

[[bin]]
name = "sse_parser"
path = "fuzz_targets/sse_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tool_use_aggregator"
path = "fuzz_targets/tool_use_aggregator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "inbound_filter"
path = "fuzz_targets/inbound_filter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sse_parser_openai"
path = "fuzz_targets/sse_parser_openai.rs"
test = false
doc = false
bench = false
