[package]
name = "sieve-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sieve CLI daemon: hyper proxy server, config, audit log"
publish = false

[[bin]]
name = "sieve"
path = "src/main.rs"

[features]
# v2.0 Phase B beta：行为序列检测，默认关闭（PRD §9 #15）。
# 调用方通过 `cargo build --features sequence_detection` 启用，
# 触发 sieve-core 内 SessionState.sequence_window + 3 条 IN-SEQ-* 启发式。
default = []
sequence_detection = ["sieve-core/sequence_detection"]

[dependencies]
sieve-core = { path = "../sieve-core" }
sieve-rules = { path = "../sieve-rules" }
sieve-ipc = { path = "../sieve-ipc" }
sieve-policy = { path = "../sieve-policy" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { workspace = true }

tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["http1", "http2", "server"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "server-graceful", "service"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
serde_yaml = "0.9"
lru = "0.12"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
hyper = { workspace = true, features = ["http1", "server", "client"] }
hyper-util = { workspace = true, features = ["tokio", "client-legacy", "http1", "service", "server"] }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
sieve-core = { path = "../sieve-core" }
sieve-ipc = { path = "../sieve-ipc" }
anyhow = "1"
tempfile = "3"
serde_json = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
