[package]
name = "sieve-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
description = "Sieve: local-only LLM traffic security proxy for crypto developers (CLI/daemon)"
keywords = ["security", "llm", "proxy", "crypto", "anthropic"]
categories = ["command-line-utilities", "cryptography"]
# publish=false：crates.io 发布是 Phase 2（需把 7 个 workspace crate 一并发版）。
# 当前可用 `cargo install --git https://github.com/SieveAI-dev/sieve sieve-cli`（从 git 装，
# 不受 publish=false 影响）。
publish = false

[[bin]]
name = "sieve"
path = "src/main.rs"

[features]
# v2.0 Phase B beta：行为序列检测，默认关闭。
# 调用方通过 `cargo build --features sequence_detection` 启用，
# 触发 sieve-core 内 SessionState.sequence_window + 3 条 IN-SEQ-* 启发式。
default = []
sequence_detection = ["sieve-core/sequence_detection"]
# GA 编译期密钥 gate：传递给 sieve-updater + sieve-ipc。
# GA release build 用 `cargo build --features ga_keys` 强制真实签名公钥就位，
# 占位（TRUSTED_PUBKEY=None / SIEVE_ORIGIN_PUBLIC_KEY 全零）则编译失败。
# alpha build（default）不启用，行为不变。
ga_keys = ["sieve-updater/ga_keys", "sieve-ipc/ga_keys"]
# 本地用量/计费核算（可选特性，默认关）：`sieve usage` 子命令 + daemon 端
# 独立 token 核算 / relay 偏差观测。仅本地，永不上传。关闭时整条 billing 路径
# 与 tiktoken-rs 依赖一并从构建中擦除。
usage = ["dep:tiktoken-rs"]
# 加密审计档案（可选特性，默认关）：`sieve audit keygen/rotate-key/decrypt`
# 子命令 + daemon 端 full 档加密归档写入（age + 哈希链）。关闭时这些 CLI 子命令
# 与 age/sha2/base64 依赖一并擦除；audit.level=full 优雅降级为 metadata 档。
# tail/query/show 三个纯 SQLite 查询子命令不受影响，始终可用。
audit-crypto = ["dep:age", "dep:sha2", "dep:base64"]

[dependencies]
sieve-core = { path = "../sieve-core" }
sieve-rules = { path = "../sieve-rules" }
sieve-ipc = { path = "../sieve-ipc" }
sieve-policy = { path = "../sieve-policy" }
sieve-updater = { path = "../sieve-updater" }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { workspace = true }

tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true, features = ["http1", "http2", "server"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "server-graceful", "service"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
# toml_edit：CodexAdapter 写 ~/.codex/config.toml 的 [features] hooks=true 时
# 保留用户其他键和注释（toml 0.8 已传递依赖此版本，license 已过 cargo-deny）。
toml_edit = "0.22"

clap = { version = "4", features = ["derive"] }
# shell 补全生成（bash/zsh/fish）；clap 官方 crate，同 MIT/Apache 许可，随 clap 同步。
clap_complete = "4"
anyhow = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
serde_json = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
serde_yaml = "0.9"
lru = "0.16"
regex = "1"
arc-swap = { workspace = true }
# 用量/计费核算专用，挂到 `usage` feature（默认不编译）。
tiktoken-rs = { version = "0.12", default-features = false, optional = true }
# 加密审计档案专用，挂到 `audit-crypto` feature（默认不编译）。
age = { version = "0.11", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
hyper = { workspace = true, features = ["http1", "server", "client"] }
hyper-util = { workspace = true, features = ["tokio", "client-legacy", "http1", "service", "server"] }
http-body-util = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
sieve-core = { path = "../sieve-core" }
sieve-ipc = { path = "../sieve-ipc" }
anyhow = "1"
tempfile = "3"
serde_json = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
serial_test = { workspace = true }
sieve-testing = { path = "../sieve-testing" }

[lints]
workspace = true
