[package]
name = "sieve-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sieve core: protocol, forwarder, SSE pipeline (Anthropic-only Phase 1)"
publish = false

[features]
default = ["forwarder"]
# forwarder：启用 hyper/rustls/tokio 网络栈与 aws-lc-rs C 依赖。
# 关闭后 sieve-core 仅保留纯 Rust 模块（sse/aggregator/protocol/pipeline 等），
# 用于 cargo fuzz 等需要 sanitizer instrumentation 的场景，避免 ASan 链接 sancov 符号失败。
#
# v1.4 注：dispatch / inbound_hold / inbound_hook 依赖 bytes + tokio(async)，
# 这些模块通过 #[cfg(feature = "forwarder")] 与 fuzz no-feature 场景隔离。
forwarder = [
    "dep:tokio",
    "dep:hyper",
    "dep:hyper-util",
    "dep:hyper-rustls",
    "dep:rustls",
    "dep:webpki-roots",
    "dep:http",
    "dep:http-body",
    "dep:http-body-util",
    "dep:bytes",
]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "time"], optional = true }
hyper = { workspace = true, features = ["http1", "http2", "client", "server"], optional = true }
hyper-util = { workspace = true, features = ["tokio", "client-legacy", "http1", "http2"], optional = true }
hyper-rustls = { workspace = true, features = ["aws-lc-rs", "http1", "http2", "webpki-tokio", "tls12"], optional = true }
rustls = { workspace = true, features = ["aws-lc-rs", "tls12"], optional = true }
webpki-roots = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
# v1.4：sieve-ipc 用于 pipeline dispatch / hook / hold 路径（forwarder feature 下）
sieve-ipc = { path = "../sieve-ipc" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
strsim = "0.11"
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
