[package]
name = "sieve-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sieve IPC: JSON-RPC 2.0 over Unix socket + pending/decision file protocol (ADR-013)"
publish = false

[dependencies]
tokio = { workspace = true, features = ["net", "fs", "sync", "time", "rt-multi-thread", "macros", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
fd-lock = { workspace = true }
# Ed25519 签名验证（X-Sieve-Origin header 防伪造，关联 ADR-019）。
# sieve-rules 已引入相同版本，保持一致避免重复编译。
# rand_core feature：暴露 SigningKey::generate，测试侧密钥生成需要。
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
# Base64 编码/解码，用于 header 签名字段序列化。
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
# 测试用随机数生成（生成 Ed25519 密钥对用于 roundtrip 测试）。
rand = "0.8"

[lints]
workspace = true
