[package]
name = "sieve-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sieve IPC: JSON-RPC 2.0 over Unix socket + pending/decision file protocol (ADR-013)"
publish = false

[features]
# ADR-034 GA 编译期密钥 gate：启用时 `SIEVE_ORIGIN_PUBLIC_KEY` 全零占位触发编译失败，
# 阻止 X-Sieve-Origin 验签 fail-open 进入 GA 二进制。默认（alpha）不启用，行为不变。
ga_keys = []

[dependencies]
tokio = { workspace = true, features = ["net", "fs", "sync", "time", "rt-multi-thread", "macros", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
fd-lock = { workspace = true }
# Ed25519 签名验证（X-Sieve-Origin header 防伪造，关联 ADR-019）。
# sieve-rules 已引入相同版本，保持一致避免重复编译。
# rand_core feature：暴露 SigningKey::generate，测试侧密钥生成需要。
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
# Base64 编码/解码，用于 header 签名字段序列化。
base64 = "0.22"
# bytes：BytesMut 用于 FrameReader 的可增长缓冲区（SPEC-005 §1.3.1）。
bytes = { workspace = true }
# memchr：SIMD 加速的 \n 扫描，用于帧接收算法（SPEC-005 §1.3.1）。
memchr = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
# 测试用随机数生成（生成 Ed25519 密钥对用于 roundtrip 测试）。
rand = "0.8"
# tokio-test：AsyncRead mock builder，用于 FrameReader 边界测试。
tokio-test = "0.4"

[lints]
workspace = true
