[package]
name = "sieve-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sieve policy: 用户规则加载 / lint / 用户引擎 / 灰名单管理（PRD v2.0 §5.4 §5.5 §6.3）"
publish = false

[dependencies]
sieve-rules = { path = "../sieve-rules" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
chrono = { workspace = true }

[lints]
workspace = true
