[package]
name = "sieve-updater"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Update + telemetry beacon"
publish = false

[features]
# GA 编译期密钥 gate：启用时占位公钥 `TRUSTED_PUBKEY = None` 触发编译失败，
# 阻止 fail-open 的规则签名校验进入 GA 二进制。默认（alpha）不启用，行为不变。
ga_keys = []

[dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "fs"] }
hyper = { workspace = true, features = ["http1", "client"] }
hyper-util = { workspace = true, features = ["tokio", "client-legacy", "http1"] }
hyper-rustls = { workspace = true, features = ["aws-lc-rs", "http1", "webpki-tokio", "tls12"] }
http = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# SPEC-007: 复用 sieve-core 上游代理 connector（ProxyConfig/ProxyConnector）
sieve-core = { path = "../sieve-core" }
uuid = { workspace = true, features = ["v4"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc"] }
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "fs", "rt-multi-thread"] }
tempfile = "3"
serial_test = { workspace = true }
# hermetic updater 闭环 e2e（updater_e2e.rs）：复用 sieve-testing 的 plain-HTTP mock。
# hyper/http-body-util/bytes/sha2/zstd/sieve-core 已在 [dependencies]，集成测试可直接用。
sieve-testing = { path = "../sieve-testing" }

[lints]
workspace = true
